--- a/sapceInvaders/sapceInvaders.vcxproj
+++ b/sapceInvaders/sapceInvaders.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Alieno.h" />
+    <ClInclude Include="Ctimer.h" />
     <ClInclude Include="Gioco.h" />
     <ClInclude Include="immediate2d.h" />
     <ClInclude Include="Player.h" />
@@ -135,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Alieno.cpp" />
+    <ClCompile Include="Ctimer.cpp" />
     <ClCompile Include="Gioco.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
